- NEW: Option(s) to change Page Header title text on post type archive page and taxonomy archive page.
- NEW: Breadcrumb integrations for [Rank Math](https://wordpress.org/plugins/seo-by-rank-math/).
- NEW: Breadcrumb integrations for [SEOPress](https://wordpress.org/plugins/wp-seopress/).
- NEW: Archive description is now automatically displayed on the archive page.
- NEW: Option(s) to change blog posts grid row gap.
- NEW: WooCommerce 2 columns layout for Cart page (configurable on Customizer).
- NEW: WooCommerce product's quantity input will automatically have minus (-) and plus (+) button.
- NEW: Option(s) to change WooCommerce products grid row gap.
- NEW: Add some new modules into the modules manager for Suki Pro v1.1.0.
- TWEAK: Improve frontend's general typography CSS for better readibility and accessibility.
- TWEAK: Improve Gutenberg CSS for new native blocks and styles.
- TWEAK: Improve dynamic CSS placement on frontend to allow Child Theme override the styles easier.
- TWEAK: Improve Header Builder: Allow header logo to be placed on all header sections.
- TWEAK: Improve Header Builder: Allow HTML header element to be placed on mobile header section.
- TWEAK: Page Header is now enabled by default (for fresh installation only).
- TWEAK: Improve WooCommerce cart and checkout page styles.
- TWEAK: Improve WooCommerce filter widgets styles.
- TWEAK: WooCommerce frontend CSS is now only 1 request and 58KB in size (using theme's dedicated WooCommerce frontend CSS instead of overriding original WooCommerce CSS).
- TWEAK: Add smooth animation for accordion menu dropdown (used in mobile header menu).
- TWEAK: Improve featured image size used in default post layout and grid post layout.
- TWEAK: Redesign Suki theme's dashboard page UI.
- TWEAK: Use new radio image control on some Customizer settings UI for more intuitive experience.
- TWEAK: Update Google Fonts list to the latest one.
- FIX: WooCommerce select2 CSS.
- FIX: Some frontend CSS bugs.